# CUDAPlayground

./: .gitignore  CMakeLists.txt  CUDABase.sln  CUDABase.vcxproj  CUDABase.vcxproj.filters  CUDAPlayground.sln  LICENSE  README.md
CUDABase/: CMakeLists.txt  CUDABase.vcxproj  CUDABase.vcxproj.filters  README.md
CUDABase/gpu/: kernel.cu
CUDABase/include/: cuda_buffer.h  cuda_error_handling.h  cuda_manager.h  cuda_memory.h  cuda_memory_defines.h
CUDABase/src/: cuda_manager.cpp  cuda_memory.cpp
ImageResizer/: CMakeLists.txt  ImageResizer.args.json  ImageResizer.vcxproj  ImageResizer.vcxproj.filters  README.md
ImageResizer/gpu/: resize_kernel.cu
ImageResizer/include/: image_resizer.h
ImageResizer/src/: image_resizer.cpp  main.cpp
include/: cuda_buffer.h  cuda_error_handling.h  cuda_manager.h  cuda_memory_defines.h  logger.h  timer.h
src/: cuda_manager.cpp  logger.cpp  main.cpp  new.cpp
